# wise-agents

./: .gitignore  CONTRIBUTING.md  GETTING_STARTED.md  Makefile  README.md  SECURITY.md  __throwaway.txt  mkdocs.yml  pyproject.toml  test_message.yaml
.github/workflows/: build-and-test-trigger.yml  build-and-test-workflow-run.yml  build-and-test.yml  publish-docs.yml  release.yml
.wise-agents/: registry_config.yaml
artemis/: README.MD  artemis.sh
docs/: agent_coordination.md  agentic_chatbot.md  communication.md  community.md  contributing.md  custom_agents.md  declare_agents.md  dev_quick_start.md  example_1.md  example_2.md  index.md  license.md  multi_agents.md  rag_architecture.md  security.md  sequential_coordinator_example.md  using_cli.md  wise_agents_architecture.md
docs/artemis/: README.md
docs/graphdb/: README.md
docs/model-serving/: README.md
docs/vectordb/: README.md
examples/: README.md  prerequisites.md
examples/memory_agentic_chatbot/: README.md  intelligent-agent.yaml  web-interface.yaml
examples/memory_agentic_chatbot_groq/: README.md  intelligent-agent.yaml
examples/perceive_and_act/: README.md  custom_agents.py  intelligent-agents.yaml
examples/perceive_ask_and_act/: README.md  books_read.txt  custom_agents.py  intelligent-agents.yaml
examples/run_examples_podman/: README.md  container-wise-agents
examples/sequential_coordinator/: README.md  intelligent-agents.yaml  web-interface.yaml
examples/simple_agentic_chatbot/: intelligent-agent.yaml
graphdb/: .env.example  README.MD  run_graphdb.sh
llama/: README.MD  run_llama.sh
mkdocs-scripts/: gen_ref_pages.py
model-serving/: .env.example  README.MD  model_inference.sh
redis/: .env.example  README.MD  run_redis.sh
src/wiseagents/: WiseAgent.py  WiseAgentEvent.py  WiseAgentMessage.py  WiseAgentVectorDB.py  __init__.py  constants.py  core.py  utils.py  wise_agent.py  wise_agent_impl.py  wise_agent_message.py  wise_agent_messaging.py
src/wiseagents/agents/: __init__.py  assistant.py  collaboration_wise_agents.py  coordinator_wise_agents.py  rag_wise_agents.py  utility_wise_agents.py
src/wiseagents/cli/: __init__.py  test-multiple.yaml  web-interface.yaml  wise_agent-cli.py  wise_agent_cli.py
src/wiseagents/graphdb/: Entity.py  GraphDocument.py  LangChainWiseAgentGraphDB.py  Neo4jLangChainWiseAgentGraphDB.py  Relationship.py  Source.py  WiseAgentGraphDB.py  __init__.py  lang_chain_wise_agent_graph_db.py  wise_agent_graph_db.py
src/wiseagents/llm/: LangChainWiseAgentRemoteLLM.py  OpenaiAPIWiseAgentLLM.py  WiseAgentEmbeddedLLM.py  WiseAgentLLM.py  WiseAgentRemoteLLM.py  __init__.py  lang_chain_wise_agent_remote_LLM.py  openai_API_wise_agent_LLM.py  wise_agent_LLM.py  wise_agent_embedded_LLM.py  wise_agent_remote_LLM.py
src/wiseagents/schema/: neo4j-langchain-wise-agent-graph-db.json
src/wiseagents/transports/: __init__.py  stomp.py
src/wiseagents/vectordb/: PGVectorWiseAgentVectorDB.py  PGVector_wise_agent_vectorDB.py  WiseAgentVectorDB.py  __init__.py  document.py  lang_chain_wise_agent_vector_db.py  wise_agent_vectorDB.py  wise_agent_vector_db.py
src/wiseagents/yaml/: __init__.py  wise_yaml_loader.py  wiseagents_yaml_object.py
src/wiseagents/yaml_env/: __init__.py  yaml_utils.py
tests/: __init__.py
tests/model-serving/: podman-cpu.sh
tests/wiseagents/: __init__.py  test-assistant.yaml  test-multiple.yaml  test.yaml  test_WiseAgentRegistry.py  test_challenger.py  test_coordinator.py  test_message.yaml  test_phased_coordinator.py  test_sequential_coordinator.py  test_tools.py  test_tools_fakeLLM.py  test_tools_groq.py  test_wise_agent_message_exchange.py  test_yaml_deserializer.py  test_yaml_serialization.py  test_yaml_serializtion.py  testing_utils.py
tests/wiseagents/agents/: __init__.py  test_challenger.py  test_graph_rag_challenger.py  test_tools.py  (+5 more)
vectordb/: .env.example  README.MD  run_vectordb.sh
wise-agents/: WiseAgent.py  WiseAgentLLM.py  WiseAgentMessage.py  WiseAgentMessageType.py  WiseAgentRegistry.py
wise-agents/llm/: LangChainRemoteWiseAgentLLM.py  LocalWiseAgentLLM.py  RemoteWiseAgentLLM.py  test_LangChainRemoteWiseAgentLLM.py
(+12 files in other folders)
