[project]
name = "wiseagents"
version = "0.0.1"
description = "Multi-agent framework"
authors = []
readme = "README.md"
requires-python = ">=3.8.1,<4.0"

dependencies = [
    "langchain==0.2.5",
    "langchain-community==0.2.5",
    "langchain-openai==0.1.7",
    "langchain-postgres==0.0.9",
    "pydantic==2.7.4",
    "sentence-transformers==3.0.1",
    "streamlit==1.36.0",
    "pyyaml==6.0.1",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[pytest]
pythonpath = "src"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

