
[build-system]
requires = [
    "dynamic-versioning",
    "setuptools>=64", 
    "setuptools-scm[toml]>=8",
    "twine",
    "wheel", 
]
build-backend = "setuptools.build_meta"

[project]
name = "wiseagents"
dynamic = [
  "version",
]
description = "Multi-agent framework"
authors = []
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8.1,<4.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development"
]
dependencies = [
    "langchain==0.2.16",
    "langchain-community==0.2.16",
    "langchain-huggingface==0.0.3",
    "langchain-openai==0.1.7",
    "langchain-postgres==0.0.9",
    "neo4j==5.25",
    "pydantic==2.7.4",
    "sentence-transformers==3.0.1",
    "streamlit==1.36.0",
    "pyyaml==6.0.1",
    "stomp.py==8.1.2",
    "mkdocstrings-python",
    "mkdocs",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mkdocs-include-markdown-plugin",
    "redis",
    "gradio",
]

[project.urls]
homepage = "https://wise-agents.github.io/"
documentation = "https://wise-agents.github.io/"
repository = "https://github.com/wise-agents/wise-agents"
changelog = "https://github.com/wise-agents/wise-agents/blob/master/CHANGELOG.md"
Issues = "https://github.com/wise-agents/wise-agents/issues"

[project.optional-dependencies]
test = [
    "pytest",
]
build = [
    "dynamic-versioning",
    "setuptools>=64", 
    "setuptools-scm[toml]>=8",
    "twine",
    "wheel",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "CRITICAL"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "src"
]
markers = [
    "needsllm: The LMM is too big to run in GitHub Actions, so we need to disable tests requiring it there.",
    "needsllama: Needs llama, and the model is too big for GitHub Actions.",
    "needsqroq: Needs an API key for Groq to be able to run successfully.",
]


[tool.setuptools_scm]
